表示設定のクエリパラメーター追加
